--- a/css/style.css
+++ b/css/style.css
@@ -197,10 +197,15 @@
 }
 
 .page-header {
-    background: linear-gradient(rgba(24, 29, 56, .7), rgba(24, 29, 56, .7)), url(../img/carousel-1.jpg);
-    background-position: center center;
+    background: linear-gradient(rgba(24, 29, 56, .7), rgba(24, 29, 56, .7)), url(../img/about.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    width: 100%
+}
+
+.lady-header {
+    background: linear-gradient(rgba(24, 29, 56, .7), rgba(24, 29, 56, .7)), url(../img/lady.jpg);
+    background-repeat: no-repeat;
+    width: 100%
 }
 
 .page-header-inner {
